# gifwat

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml  test.yml
src/: App.jsx  App.test.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddGifModal.jsx  AddGifModal.test.jsx  GifCard.jsx  GifCard.test.jsx  GifGrid.jsx  GifGrid.test.jsx  SearchBar.jsx  SearchBar.test.jsx
src/test/: setup.js
